# Layla-chat

./: .env  .gitignore  Cargo.toml  README.md
chat_client/: Cargo.toml
chat_client/src/: main.rs
chat_core/: Cargo.toml
chat_server/: Cargo.toml
client_core/: Cargo.toml
client_core/src/: config.rs  exception.rs  group.rs  lib.rs  manager.rs  message.rs  request.rs  service.rs  user.rs
client_core/src/net/: channel.rs  mod.rs
core_base/: Cargo.toml
core_base/src/: context.rs  lib.rs  message.rs  raw_group.rs  raw_user.rs  request.rs
http/src/: http_request.rs  http_response.rs
http_server/: Cargo.toml
http_server/data/: order.json
http_server/public/: 404.html  health.html  index.html
http_server/src/: handler.rs  lib.rs  main.rs  router.rs  server.rs
logger/: Cargo.toml
logger/src/: exception.rs  lib.rs
sql/: Cargo.toml
sql/src/: database.rs  lib.rs  table.rs
utils/: Cargo.toml
utils/src/: en_de.rs  exception.rs  init_block.rs  lib.rs  setting.rs
