[workspace] 
members = [ "chat_client", "client_core", "http", "http_server", "server_core", "tcp_server" ]
# resolver = "2"

[package]
name = "layla_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]