[workspace] 
members = [ "chat_client", "chat_server", "client_core", "http", "http_server", "logger", "server_core", "sql", "tcp_server" , "utils"]
resolver = "2"

[package]
name = "layla_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
