[package]
name = "client_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
# serde = "1.0.164"
lazy_static = "1.4.0"
dotenv="0.15.0"
tokio = { version = "1.36.0", features = ["full"] }
logger = { path = "../logger" }
utils = { path = "../utils" }