[package]
name = "sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version="1.0.134", features = ["derive"] }
chrono = { version="0.4.19", features = ["serde"] }
dotenv = "0.15.0"
sqlx = { version="0.7.3", features = ["mysql", "runtime-tokio-rustls", "macros", "chrono"] }